Address Java deprecation warning for Locale